updated symposia agenda
updated symposia agenda

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -4650,7 +4650,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T14:26:21Z</date>
+						<date>2018-08-15T19:41:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5089,11 +5089,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xfzDTvo0hTTt
-								JU+rb9SWSw==
+								BYiV2G5ZR0u8
+								DCwNK/y1ig==
 								</data>
 								<key>Size</key>
-								<integer>196099</integer>
+								<integer>196205</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5119,11 +5119,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								quhotIb6i1q/
-								PFCi66Lsrg==
+								UVTRgSBGLk8G
+								aoELDc6HIg==
 								</data>
 								<key>Size</key>
-								<integer>157016</integer>
+								<integer>157214</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5392,7 +5392,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-15T19:41:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5406,6 +5406,16 @@
 								</data>
 								<key>Size</key>
 								<integer>91721</integer>
+							</dict>
+							<key>files/pin.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xcy6OK5dO/8V
+								xnwWql1CCA==
+								</data>
+								<key>Size</key>
+								<integer>3950</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -5831,31 +5841,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D9K4TxMz8sfg
-								gNMrMCrRFQ==
+								5W63WaxyV9Az
+								PXzFyFFoxg==
 								</data>
 								<key>Size</key>
-								<integer>198760</integer>
+								<integer>199247</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								slpbL2xfMVlz
-								HtNjaMcloA==
+								IvKXc8WeZenb
+								Dcg0vcyGxQ==
 								</data>
 								<key>Size</key>
-								<integer>27079</integer>
+								<integer>30703</integer>
+							</dict>
+							<key>files/stacks_page_page48.php</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								asS6houAG3U0
+								vky2WZQZ8A==
+								</data>
+								<key>Size</key>
+								<integer>922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								xXbX0CEo/VoC
-								BqhDaUKszw==
+								PgvW+VNPQ/95
+								ZO6ttJ9dEQ==
 								</data>
 								<key>Size</key>
-								<integer>156578</integer>
+								<integer>157381</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8862,7 +8882,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T14:27:45Z</date>
+						<date>2018-08-15T19:41:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8911,11 +8931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GXW8iKnSi+4k
-								9Tf/A0mzSA==
+								Mm/IkEWEChOu
+								08Xplu5T2Q==
 								</data>
 								<key>Size</key>
-								<integer>4345</integer>
+								<integer>4281</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8964,7 +8984,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T14:27:45Z</date>
+						<date>2018-08-15T19:41:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10003,11 +10023,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								KqR1KWiKbOYX
+								WSPOrizpDw==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3327</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10101,8 +10121,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCSN/H4
-				mtSAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCSXLzF
+				mvKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10112,7 +10132,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCSN/H4nlaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCSXLzFl06A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
