--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T14:26:21Z</date>
+						<date>2018-08-15T19:41:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -472,11 +472,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xfzDTvo0hTTt
-								JU+rb9SWSw==
+								BYiV2G5ZR0u8
+								DCwNK/y1ig==
 								</data>
 								<key>Size</key>
-								<integer>196099</integer>
+								<integer>196205</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -502,11 +502,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								quhotIb6i1q/
-								PFCi66Lsrg==
+								UVTRgSBGLk8G
+								aoELDc6HIg==
 								</data>
 								<key>Size</key>
-								<integer>157016</integer>
+								<integer>157214</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
