--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T19:41:42Z</date>
+						<date>2018-08-15T22:08:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5W63WaxyV9Az
-								PXzFyFFoxg==
+								X5/0wpO9YOCY
+								7bnnT4h0WA==
 								</data>
 								<key>Size</key>
-								<integer>199247</integer>
+								<integer>199138</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PgvW+VNPQ/95
-								ZO6ttJ9dEQ==
+								f6DpPBKj74iV
+								hWJZ2bwQ+A==
 								</data>
 								<key>Size</key>
-								<integer>157381</integer>
+								<integer>157179</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
