changes to HWB agenda
changes to HWB agenda

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1972,7 +1972,7 @@
 					<key>page23 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T15:53:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2241,11 +2241,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dP63ImemEtn0
-								kDB+U1C+8Q==
+								WFtGmZZuZg70
+								ckecIIFc9w==
 								</data>
 								<key>Size</key>
-								<integer>57746</integer>
+								<integer>57737</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4660,7 +4660,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5109,11 +5109,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xAi5iYyikT7c
-								sTE9EJxQEg==
+								8jRM4ftANRYP
+								GgUcAERRHA==
 								</data>
 								<key>Size</key>
-								<integer>201248</integer>
+								<integer>200698</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5139,11 +5139,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QmMa6dAHf1tZ
-								+8pYYPjsSw==
+								bNNqEaEIciyG
+								cid8c1zzGA==
 								</data>
 								<key>Size</key>
-								<integer>161301</integer>
+								<integer>160928</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5156,7 +5156,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T15:53:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5375,11 +5375,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pcpnniIUYhqa
-								xDOPczdq1A==
+								4m3DypUadjYC
+								kwvCKJyiYw==
 								</data>
 								<key>Size</key>
-								<integer>174659</integer>
+								<integer>178277</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -5395,11 +5395,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VdYbYzKhoEkL
-								CUcu1SFIHA==
+								9B0bYUggccr1
+								KjVgwNvORg==
 								</data>
 								<key>Size</key>
-								<integer>96180</integer>
+								<integer>97638</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5412,7 +5412,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5861,11 +5861,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5/0wpO9YOCY
-								7bnnT4h0WA==
+								CZhin4pmRdo8
+								4YcCgbn9Pg==
 								</data>
 								<key>Size</key>
-								<integer>199138</integer>
+								<integer>198588</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5891,11 +5891,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f6DpPBKj74iV
-								hWJZ2bwQ+A==
+								dBRat8famwOb
+								6VIDLnEwBQ==
 								</data>
 								<key>Size</key>
-								<integer>157179</integer>
+								<integer>156783</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6460,7 +6460,7 @@
 					<key>page51 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T15:53:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6529,11 +6529,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fGuP2S9+QiB7
-								XTvHGmP3SQ==
+								WyRyDjqs2R5e
+								2JryaYO88w==
 								</data>
 								<key>Size</key>
-								<integer>107089</integer>
+								<integer>109437</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -6549,11 +6549,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ojqfe9o1yvMR
-								qEmFpxxRzA==
+								NFVqxxWUt9bN
+								kqOyHFLglA==
 								</data>
 								<key>Size</key>
-								<integer>44917</integer>
+								<integer>46073</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8434,7 +8434,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-27T15:53:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8673,11 +8673,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5LD52PA5NEwr
-								iQfiw+UR+w==
+								UR2tXbQ5G89M
+								57SBLOkV0w==
 								</data>
 								<key>Size</key>
-								<integer>224984</integer>
+								<integer>227681</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -8693,11 +8693,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uidQ8/RG0Qxi
-								ViZ1EZJsqA==
+								1CSsQEwCygIx
+								nCGNH8Hupg==
 								</data>
 								<key>Size</key>
-								<integer>126861</integer>
+								<integer>128475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8902,7 +8902,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8951,11 +8951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GXW8iKnSi+4k
-								9Tf/A0mzSA==
+								mku/FTfnUjh1
+								hvslPRKXzA==
 								</data>
 								<key>Size</key>
-								<integer>4345</integer>
+								<integer>4441</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9004,7 +9004,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10141,8 +10141,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCSbeU9
-				4DeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCaKzsd
+				xKCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10152,7 +10152,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCSbeU93X+A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCaKzsdx5uA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
