--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xAi5iYyikT7c
-								sTE9EJxQEg==
+								8jRM4ftANRYP
+								GgUcAERRHA==
 								</data>
 								<key>Size</key>
-								<integer>201248</integer>
+								<integer>200698</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QmMa6dAHf1tZ
-								+8pYYPjsSw==
+								bNNqEaEIciyG
+								cid8c1zzGA==
 								</data>
 								<key>Size</key>
-								<integer>161301</integer>
+								<integer>160928</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
