--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-15T22:08:04Z</date>
+						<date>2018-08-27T15:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5/0wpO9YOCY
-								7bnnT4h0WA==
+								CZhin4pmRdo8
+								4YcCgbn9Pg==
 								</data>
 								<key>Size</key>
-								<integer>199138</integer>
+								<integer>198588</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f6DpPBKj74iV
-								hWJZ2bwQ+A==
+								dBRat8famwOb
+								6VIDLnEwBQ==
 								</data>
 								<key>Size</key>
-								<integer>157179</integer>
+								<integer>156783</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
